dropdown && table pages

--- a/test/panel.html
+++ b/test/panel.html
@@ -101,7 +101,30 @@
                 <div class="panel-heading">
                   <div class="panel-title">Panel 标题</div>
                 </div>
-                <div class="panel-body">容器内容</div>
+                <div class="panel-body">
+                  <form class="form-horizontal">
+                    <div class="form-group">
+                      <div class="col-md-4">
+                        <label class="col-md-4 control-label">名称1:</label>
+                        <div class="col-md-8 input-padding-left">
+                          <input type="text" class="form-control" placeholder="请输入名称1" />
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <label class="col-md-4 control-label">名称2:</label>
+                        <div class="col-md-8 input-padding-left">
+                          <input type="text" class="form-control" placeholder="请输入名称2" />
+                        </div>
+                      </div>
+                      <div class="col-md-4">
+                        <label class="col-md-4 control-label">名称3:</label>
+                        <div class="col-md-8 input-padding-left">
+                          <input type="text" class="form-control" placeholder="请输入名称3" />
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
                 <div class="panel-footer">
                   <button type="button" class="btn bp-btn-primary">确定</button>
                   <button type="button" class="btn bp-btn-default">取消</button>
@@ -113,7 +136,20 @@
   &lt;div class="panel-heading"&gt;
     &lt;div class="panel-title"&gt;Panel 标题&lt;/div&gt;
   &lt;/div&gt;
-  &lt;div class="panel-body"&gt;容器内容&lt;/div&gt;
+  &lt;div class="panel-body"&gt;
+&lt;form class="form-horizontal"&gt;
+  &lt;div class="form-group"&gt;
+    &lt;div class="col-md-4"&gt;
+      &lt;label class="col-md-4 control-label"&gt;名称1:&lt;/label&gt;
+      &lt;div class="col-md-8 input-padding-left"&gt;
+        &lt;input type="text" class="form-control" placeholder="请输入名称1" /&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+    ...
+  &lt;/div&gt;
+  &lt;div class="form-group"&gt; ... &lt;/form&gt;
+&lt;/form&gt;
+  &lt;/div&gt;
   &lt;div class="panel-footer"&gt;
     &lt;button type="button" class="btn bp-btn-primary"&gt;确定&lt;/button&gt;
     &lt;button type="button" class="btn bp-btn-default"&gt;取消&lt;/button&gt;
