bugfix: fix anchor bug

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <li class="menu-item">
                         <div class="title aside-menu-title">Component list</div>
                         <ul class="list-unstyled">
-                            <li class="menu-item"><a href="javascript:;" ng-click="vm.goAnchor('button')">Button</a></li>
-                            <li class="menu-item"><a href="javascript:;" ng-click="vm.goAnchor('form')">Form</a></li>
-                            <li class="menu-item"><a href="javascript:;" ng-click="vm.goAnchor('panel')">Panel</a></li>
-                            <li class="menu-item"><a href="javascript:;" ng-click="vm.goAnchor('table')">Table</a></li>
-                            <li class="menu-item"><a href="javascript:;" ng-click="vm.goAnchor('modal')">Modal</a></li>
+                            <li class="menu-item"><a href="#button_anchor">Button</a></li>
+                            <li class="menu-item"><a href="#form_anchor">Form</a></li>
+                            <li class="menu-item"><a href="#panel_anchor">Panel</a></li>
+                            <li class="menu-item"><a href="#table_anchor">Table</a></li>
+                            <li class="menu-item"><a href="#modal_anchor">Modal</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -109,32 +109,6 @@
                     <pre>&lt;div class="bp-container"&gt;&lt;/div&gt;</pre>
                 </div>
             </section>
-            <!--<div>
-              <h3 id="form_anchor">Form</h3>
-              <div class="form-group">
-                <label class="control-label"><span class="required-star">*</span>龙破斩的咒文:</label>
-                <input type="text" class="form-control" placeholder="请输入" />
-              </div>
-              <div class="form-group">
-                <label for="control-label"><span class="required-star">*</span>Dropdown:</label>
-                <ul class="dropdown-menu" style="display: block; position: relative; width: 160px; float: none;">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                </ul>
-              </div>
-              <div class="form-group">
-                <label for="control-label">Select:</label>
-                <select multiple class="form-control">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                </select>
-              </div>
-            </div>-->
             <section>
                 <h3 id="panel_anchor">Panel</h3>
                 <div class="panel bp-panel-primary">
